changed questions to web service

--- a/views/drinks.jade
+++ b/views/drinks.jade
@@ -14,83 +14,35 @@ block scripts
 		var skips;
 		var running = false;
 		$(function(){
-			question_data = {
-				"questions" : 
-					{">" : 
-						{"Which drink contains more #?" : 
-							["Calories", "fat", "carbohydrates", "sugar", "sodium", "protien", "alcohol"]}, 
-					"true" : 
-						{"Which drink contains #?" : 
-							["Vitamin A", "Vitamin B3", "Vitamin C", "Vitamin B6", "Vitamin B12", "Calcium", "Iron"], 
-					"Which one may cause kidney stones?" : 
-						["kidney stones 1"], 
-					"Which one may help prevent kidney stones?" : 
-						["kidney stones 2"], 
-					"Which one may help prevent urinary tract infections?" : 
-						["urinary"], 
-					"If you’re taking medications, which one should you not drink?" : 
-						["medications"]}},
-				"answers" : {
-					"name" : 
-						["Soda","Diet Soda","Black Coffee","Vanilla Frappuccino","Mocha","Hot Chocolate",
-						"Cappuccino",
-						"Energy Drink","Diet Energy Drink","Apple Juice","Orange Juice","Grapefruit Juice","Cranberry Juice","Strawberry Smoothie","Whole Milk","Skim Milk","Chocolate Milk","Strawberry Milkshake","Wine","Beer","Light Beer","Sweet Tea","Iced Tea","Green Tea","Lemonade","Water","Enhanced Water","Sports Drink"], 
-					"Calories" : 
-						[100, 0, 2,168,165,185,60,107,7,114, 112,96,116,150,146,86,192, 373,200,102, 69,75,0,0, 99,0,53,50], 
-					"fat" : 
-						[0,0,0,2.5,7.5,8,2,0,0,0,0,0,0,1,8,0,6,17,0,0,0,0,0,0,0,0,0,0],
-					"carbohydrates" : 
-						[27,0,0,31,25,25,6,27,0,28,26,23,31,30,13,12,27,53,6,9,4,18,0,0,26,0,13,14], 
-					"sugar" : 
-						[27,0,0,26,18,225,27,0,24,2120,31,20,13,12,24,42,20,0,18,0,0,25,0,13,14], 
-					"sodium" : 
-						[30,30,5,84,0,0,0,93,93,10,2,2,5,0,98,98,110,167,10,9,9,5,5,5,10,2,0,100], 
-					"protien" : 
-						[0,0,0,5,6.5,7,4,0,0,0,2,1,1,8,8,8,9,7,0,1,1,1,0,0,0,0,0,0], 
-					"alcohol" : 
-						[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,10,4.8,4.8,0,0,0,0,0,0,0],
-					"Vitamin A" : 
-						[0,0,0,0,1,1,1,0,0,0,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,1,0], 
-					"Vitamin B3" : 
-						[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,1], 
-					"Vitamin C" : 
-						[0,0,0,0,1,1,0,0,0,1,1,1,1,1,0,0,0,1,0,0,0,0,0,0,1,0,1,1], 
-					"Vitamin B6" : 
-						[0,0,0,0,0,0,0,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,1], 
-					"Vitamin B12" : 
-						[0,0,0,0,0,0,0,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,1], 
-					"Calcium" : 
-						[0,0,0,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0], 
-					"Iron" : 
-						[0,0,0,0,1,1,0,0,0,1,1,1,1,1,0,0,0,1,0,0,0,0,0,0,0,0,0,0], 
-					"urinary" : 
-						[0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0], 
-					"kidney stones 1" : 
-						[1,1,0,0,0,0,0,1,1,0,0,0,0,0,0,0,0,0,1,1,0,0,0,0,0,0,0,0], 
-					"kidney stones 2" : 
-						[0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,1,0,1,0,0], 
-					"medications" : 
-						[0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,1,1,1,0,0,0,0,0,0,0]}};
 			$("#choiceA").click(function(){answer_question(0)});
 			$("#choiceB").click(function(){answer_question(1)});
 			$("#skip").click(function(){use_skip()});
 		});
-
 		function use_skip(){
 			if(!running){
 				$("#dialog").dialog({
 					autoOpen: true,
 					buttons: {
 						Easy: function() {
+							$.getJSON('/resources/games/drinks/easy', function(data){
+								question_data = data;
 								start_game();
 								$(this).dialog("close");
-							},
-						Easy: function() {
-							start_game();
+							});
 							$(this).dialog("close");
 						},
 						Easy: function() {
-							start_game();
+							$.getJSON('/resources/games/drinks/easy', function(data){
+								question_data = data;
+								start_game();
+							});
+							$(this).dialog("close");
+						},
+						Easy: function() {
+							$.getJSON('/resources/games/drinks/easy', function(data){
+								question_data = data;
+								start_game();
+							});
 							$(this).dialog("close");
 						}
 					},
