changed some routing stuff and better error on web api failure for drinks

--- a/views/avatar.jade
+++ b/views/avatar.jade
@@ -18,7 +18,7 @@ html(lang='en')
 					update_selection();
 				});
 				$('#save_avatar').click(function(){ 
-					var conf = confirm("Are you sure you finished creating your avatar?");
+					var conf = confirm("Are you sure you are finished creating your avatar?");
 					if(conf){
 						$('#avatar_form').submit();
 					}
