added some amounts

--- a/views/drinks.jade
+++ b/views/drinks.jade
@@ -74,34 +74,56 @@ block scripts
 			if(typeof question_history[0]["answered"] === 'undefined' && question_history.length == 1){
 				report += "<tr><td>You answered no questions.</td></tr>";
 			} else {
+				report += "<tr><th width='50%'></th><th width='25%'></th><th width='25%'></th></tr>"
 				for(var i = 0; i < question_history.length; i++){
 					if(typeof question_history[i]["answered"] !== 'undefined'){
 						report += "<tr>";
 						report += "<td>" + question_history[i]["question"] + "</td>";
-						var style_a = "";
-						var style_b = "";
-						if(question_history[i]["answer"] == 0){
-							style_a += "border: 1px solid green;";
-							style_b += "border: 1px solid red;";
-						} else if(question_history[i]["answer"] == 1){
-							style_b += "border: 1px solid green;";
-							style_a += "border: 1px solid red;";
-						}
-						if(question_history[i]["answered"] == 0){
-							style_a += "font-weight:900;";
-							style_b += "font-weight:400;";
-						} else if(question_history[i]["answered"] == 1){
-							style_b += "font-weight:900;";
-							style_a += "font-weight:400;";
-						}
-						report += "<td><span style='" + style_a + "'>" + question_history[i]["a"] + "</span></td>";
-						report += "<td><span style='" + style_b + "'>" + question_history[i]["b"] + "</span></td>";
+						var styles = style_question_choices_in_report(question_history[i]["answer"], question_history[i]["answered"]);
+						var amounts = style_question_choices_amounts_in_report(question_history[i]);
+						report += "<td><span style='" + styles["a"] + "'>" 
+						+ question_history[i]["a"] 
+						+ amounts["a"] + "</span>" 
+						+ "</td>";
+
+						report += "<td><span style='" + styles["b"] + "'>" 
+						+ question_history[i]["b"] 
+						+ amounts["b"] + "</span>"
+						+ "</td>";
 						report += "</tr>";
 					}
 				}
 			}
 			report += "</table>"
 			return report;
+		}
+		function style_question_choices_amounts_in_report(question){
+			var amount_a = "";
+			var amount_b = "";
+			if(question["question_type"] !== "true"){
+				amount_a = ", " + question_data["answers"][question["question_category"]][question_data["answers"]["name"].indexOf(question["a"])];
+				amount_b = ", " + question_data["answers"][question["question_category"]][question_data["answers"]["name"].indexOf(question["b"])];
+			}
+			return {"a" : amount_a, "b" : amount_b};
+		}
+		function style_question_choices_in_report(answer, answered){
+			var style_a = "";
+			var style_b = "";
+			if(answer == 0){
+				style_a += "border: 1px solid green;";
+				style_b += "border: 1px solid red;";
+			} else if(answer == 1){
+				style_b += "border: 1px solid green;";
+				style_a += "border: 1px solid red;";
+			}
+			if(answered == 0){
+				style_a += "font-weight:900;";
+				style_b += "font-weight:400;";
+			} else if(answered == 1){
+				style_b += "font-weight:900;";
+				style_a += "font-weight:400;";
+			}
+			return {"a" : style_a, "b" : style_b};
 		}
 
 		function report_dialog(data){
@@ -252,6 +274,7 @@ block scripts
 			return {"question" : question, 
 					"question_type" : question_type, 
 					"answer" : answer, 
+					"question_category" : question_category,
 					"a" : data["answers"]["name"][answer_choice_a],
 					"b" : data["answers"]["name"][answer_choice_b]};
 		}
