--- a/views/map.jade
+++ b/views/map.jade
@@ -5,21 +5,21 @@ block title
 	
 block content
 	h1 Map
-	#map.box
-		img(src='/assets/images/map/map.png',type='image/png',usemap='#map1', width='848px', height='656px')		
-		.ghostbox(style='left:320px;top:70px;width:370px;height:310px;')
+	#map.box(style = 'z-index:1;position:relative;')
+		img(src='/assets/images/map/map.png',type='image/png',usemap='#map1', width='848px', height='656px',style = 'z-index:5;position:relative;')		
+		.ghostbox(style='left:320px;top:70px;width:370px;height:310px;z-index:400;position:absolute;')
 			a(href='/city')
 				img.hoverghost(src='/assets/images/map/heart.png',width='100%',height='100%')
-		.ghostbox(style='left:50px;top:350px;width:230px;height:210px;')
+		.ghostbox(style='left:50px;top:350px;width:230px;height:210px;z-index:400;position:absolute;')
 			a(href='/market')
 				img.hoverghost(src='/assets/images/map/heart.png',width='100%',height='100%')
-		.ghostbox(style='left:475px;top:400px;width:350px;height:310px;')
+		.ghostbox(style='left:475px;top:400px;width:350px;height:310px;z-index:400;position:absolute;')
 			a(href='/park')
 				img.hoverghost(src='/assets/images/map/heart.png',width='100%',height='100%')
-		.ghostbox(style='left:630px;top:230px;width:250px;height:250px;')
+		.ghostbox(style='left:630px;top:230px;width:250px;height:250px;z-index:400;position:absolute;')
 			a(href='/carnival')
 				img.hoverghost(src='/assets/images/map/heart.png',width='100%',height='100%')
-		.ghostbox(style='left:190px;top:250px;width:140px;height:110px;')
+		.ghostbox(style='left:190px;top:250px;width:140px;height:110px;z-index:400;position:absolute;')
 			a(href='/house')
 				img.hoverghost(src='/assets/images/map/heart.png',width='100%',height='100%')
 		
