fixed changes requested on Beth's review: map compatibility with IE and game intro text

--- a/views/drinks.jade
+++ b/views/drinks.jade
@@ -22,7 +22,7 @@ block scripts
 		});
 		function use_skip(){
 			if(!running){
-				$("#dialog").text("You will have 60 seconds to answer as many questions as possible about Drink Nutrition. Read each answer and click on the picture of what you think is the correct answer.");
+				$("#dialog").text("You will have 60 seconds to answer as many questions as possible about Drink Nutrition. Read each question and click on the picture of what you think is the correct answer.");
 				$("#dialog").dialog({
 					autoOpen: true,
 					close: function(event, ui){
