--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -37,6 +37,7 @@ input[type=range]:after { content: attr(max); padding-left: 5px;}
     border-width: 1px;
     border-style: solid;
     border-color: rgba(150,150,150, 0.5);
+    z-index:1;
 }
 
 #error {
@@ -107,11 +108,12 @@ label.stat.attribute {
 
 /*MAP*/
 #map {
+    background: url('/assets/images/map/map.png') no-repeat center center;
+    background-size:100%;    
     position: relative;
     width: 858px;
     min-width: 858px;
     min-height: 666px;
-    z-index: 1;
     padding: 20px;
     text-align: center;
     margin-left: auto;
@@ -120,11 +122,12 @@ label.stat.attribute {
 
 .ghostbox{
     position:absolute;
-    
+    z-index: 400;
 }
 
 .ghostbox .hoverghost{
     display:none;
+    z-index: 400;
 }
 .ghostbox:hover .hoverghost{
     display:block;
