--- a/views/drinks.jade
+++ b/views/drinks.jade
@@ -8,7 +8,7 @@ block scripts
 
 block content
 	h1 Drink Mini-Game
-	div(style='width:800px;margin-left:auto;margin-right:auto;height:500px;background:white;')
+	div(style='width:800px;margin-left:auto;margin-right:auto;height:500px;background:white;font-size:x-large;')
 		div(style='float:left;width:60%;height:100%;position:relative;text-align:center;')
 			img(src='/assets/images/market/refridgerator.png', width='100%', height='100%')
 			#question(style='position:absolute;top:5%;left:5%;width:70%;')
